--- a/src/main/resources/assets/testmod/lang/en_us.lang
+++ b/src/main/resources/assets/testmod/lang/en_us.lang
@@ -1,9 +1,11 @@
 #ITEM
 #(item.[item registryName].name)
 item.dick.name=Dick
+item.matrix_crystal.name=Matrix Crystal
 
 #BLOCK
 #(tile.[block registryName].name)
+tile.matrix_crystal_meteorite.name=Matrix Crystal Meteorite
 tile.iron_meteorite.name=Iron Meteorite
 
 #CREATIVE_TAB
