--- a/src/main/resources/assets/testmod/lang/en_us.lang
+++ b/src/main/resources/assets/testmod/lang/en_us.lang
@@ -4,6 +4,7 @@ item.matrix_crystal.name=Matrix Crystal
 
 #BLOCK
 #(tile.[block registryName].name)
+tile.inner_meteorite.name=Inner Meteorite
 tile.matrix_crystal_meteorite.name=Matrix Crystal Meteorite
 tile.iron_meteorite.name=Iron Meteorite
 tile.air_crystal.name=Air Crystal
