--- a/src/main/resources/assets/matrix_technology/lang/en_us.lang
+++ b/src/main/resources/assets/matrix_technology/lang/en_us.lang
@@ -8,6 +8,7 @@ tile.inner_meteorite.name=Inner Meteorite
 tile.matrix_crystal_meteorite.name=Matrix Crystal Meteorite
 tile.iron_meteorite.name=Iron Meteorite
 tile.air_crystal.name=Air Crystal
+tile.nitramon.name=Nitramon
 
 #CREATIVE_TAB
 #(itemGroup.[mod's name])
